[package]
name = "reorger"
version = "0.3.0"
authors = ["Russell Hay <russell.hay@gmail.com>"]
edition = "2018"
description = "A tool for reorganizing a large number of files by splitting and unsplitting files into subdirectories"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.18"
glob = "0.3.0"
